<resources>
    <string name="app_name">Expressive Countdown</string>
    <string name="config_title">Setup your countdown</string>
    <string name="config_done">Done</string>
    <string name="config_pick_date">Pick a date</string>
    <string name="config_text_name">Name</string>
    <string name="one_day">1 day</string>
    <string name="many_days">%1$d days</string>
    <string name="today">Today</string>
    <string name="set_date">Set a date</string>
    <string name="config_set_color_mode">Color mode</string>
    <string name="color_mode_system">System</string>
    <string name="color_mode_custom">Custom</string>
    <string name="color_mode_photo">Photo</string>
    <string name="photo_button_message">
        Photo color mode uses colors derived from your selected image.
    </string>
    <string name="datepicker_dialog_confirm">Save</string>
    <string name="datepicker_dialog_cancel">Cancel</string>
    <string name="config_pick_photo">Pick a photo</string>
    <string name="config_widget_preview">Preview</string>
    <string name="photo_preview_description">Photo preview</string>
    <string name="close_icon_description">Close</string>
    <string name="color_picker_dialog_title">Choose a color</string>
    <string name="color_picker_dialog_choose">Choose</string>
    <string name="color_picker_dialog_cancel">Cancel</string>
    <string name="color_picker_hue_label">Hue</string>
    <string name="color_picker_saturation_label">Saturation</string>
    <string name="color_picker_value_label">Value</string>
    <string name="color_picker_hex_field_label">Hex color</string>
    <string name="color_picker_hex_field_copy_description">Copy color</string>
    <string name="custom_color_chip_remove_content_description">Clear color</string>
</resources>