...

            if (colorMode == ColorMode.Custom) {
                OutlinedButton(
                    onClick = { showColorPicker = true },
                    modifier = Modifier.fillMaxWidth()
                ) {
                    Text(text = "Pick custom color")
                }

                if (selectedColor != Color.Unspecified) {
                    AssistChip(
                        onClick =  { },
                        label = {
...
